--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> -->
+  <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5SRcanpEnv271vHVFMc6NPOL6KccJuD0&libraries=places,directions"></script> -->
+  <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5SRcanpEnv271vHVFMc6NPOL6KccJuD0&callback=initMap"></script> -->
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5SRcanpEnv271vHVFMc6NPOL6KccJuD0&libraries=places,directions"
+  >
+  </script>
 </head>
 <body>
   <app-root></app-root>
